tests/snapshots/snapshots__list.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
  Theme                 Shoreline, follows terminal
▸ Motion                Full
  Density               Comfortable
  Provider              Sign in first
  Language              English
---
r0 c0..2 bg=Background
r0 c2..7 fg=Foreground bg=Background
r0 c7..24 bg=Background
r0 c24..51 fg=Muted bg=Background
r0 c51..64 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..8 fg=Foreground bg=Selected bold
r1 c8..24 bg=Selected
r1 c24..28 fg=Muted bg=Selected
r1 c28..64 bg=Selected
r2 c0..2 bg=Background
r2 c2..9 fg=Foreground bg=Background
r2 c9..24 bg=Background
r2 c24..35 fg=Muted bg=Background
r2 c35..64 bg=Background
r3 c0..2 bg=Background
r3 c2..10 fg=Muted bg=Background dim
r3 c10..24 bg=Background
r3 c24..37 fg=Muted bg=Background
r3 c37..64 bg=Background
r4 c0..2 bg=Background
r4 c2..10 fg=Foreground bg=Background
r4 c10..24 bg=Background
r4 c24..31 fg=Muted bg=Background
r4 c31..64 bg=Background

== dark-graphite
  Theme                 Shoreline, follows terminal
▸ Motion                Full
  Density               Comfortable
  Provider              Sign in first
  Language              English
---
r0 c0..2 bg=Background
r0 c2..7 fg=Foreground bg=Background
r0 c7..24 bg=Background
r0 c24..51 fg=Muted bg=Background
r0 c51..64 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..8 fg=Foreground bg=Selected bold
r1 c8..24 bg=Selected
r1 c24..28 fg=Muted bg=Selected
r1 c28..64 bg=Selected
r2 c0..2 bg=Background
r2 c2..9 fg=Foreground bg=Background
r2 c9..24 bg=Background
r2 c24..35 fg=Muted bg=Background
r2 c35..64 bg=Background
r3 c0..2 bg=Background
r3 c2..10 fg=Muted bg=Background dim
r3 c10..24 bg=Background
r3 c24..37 fg=Muted bg=Background
r3 c37..64 bg=Background
r4 c0..2 bg=Background
r4 c2..10 fg=Foreground bg=Background
r4 c10..24 bg=Background
r4 c24..31 fg=Muted bg=Background
r4 c31..64 bg=Background

== light-truecolor
  Theme                 Shoreline, follows terminal
▸ Motion                Full
  Density               Comfortable
  Provider              Sign in first
  Language              English
---
r0 c0..2 bg=Background
r0 c2..7 fg=Foreground bg=Background
r0 c7..24 bg=Background
r0 c24..51 fg=Muted bg=Background
r0 c51..64 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..8 fg=Foreground bg=Selected bold
r1 c8..24 bg=Selected
r1 c24..28 fg=Muted bg=Selected
r1 c28..64 bg=Selected
r2 c0..2 bg=Background
r2 c2..9 fg=Foreground bg=Background
r2 c9..24 bg=Background
r2 c24..35 fg=Muted bg=Background
r2 c35..64 bg=Background
r3 c0..2 bg=Background
r3 c2..10 fg=Muted bg=Background dim
r3 c10..24 bg=Background
r3 c24..37 fg=Muted bg=Background
r3 c37..64 bg=Background
r4 c0..2 bg=Background
r4 c2..10 fg=Foreground bg=Background
r4 c10..24 bg=Background
r4 c24..31 fg=Muted bg=Background
r4 c31..64 bg=Background

== dark-256
  Theme                 Shoreline, follows terminal
▸ Motion                Full
  Density               Comfortable
  Provider              Sign in first
  Language              English
---
r0 c0..2 bg=Background
r0 c2..7 fg=Foreground bg=Background
r0 c7..24 bg=Background
r0 c24..51 fg=Muted bg=Background
r0 c51..64 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..8 fg=Foreground bg=Selected bold
r1 c8..24 bg=Selected
r1 c24..28 fg=Muted bg=Selected
r1 c28..64 bg=Selected
r2 c0..2 bg=Background
r2 c2..9 fg=Foreground bg=Background
r2 c9..24 bg=Background
r2 c24..35 fg=Muted bg=Background
r2 c35..64 bg=Background
r3 c0..2 bg=Background
r3 c2..10 fg=Muted bg=Background dim
r3 c10..24 bg=Background
r3 c24..37 fg=Muted bg=Background
r3 c37..64 bg=Background
r4 c0..2 bg=Background
r4 c2..10 fg=Foreground bg=Background
r4 c10..24 bg=Background
r4 c24..31 fg=Muted bg=Background
r4 c31..64 bg=Background

== light-256
  Theme                 Shoreline, follows terminal
▸ Motion                Full
  Density               Comfortable
  Provider              Sign in first
  Language              English
---
r0 c0..2 bg=Background|Surface
r0 c2..7 fg=Foreground bg=Background|Surface
r0 c7..24 bg=Background|Surface
r0 c24..51 fg=Muted bg=Background|Surface
r0 c51..64 bg=Background|Surface
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..8 fg=Foreground bg=Selected bold
r1 c8..24 bg=Selected
r1 c24..28 fg=Muted bg=Selected
r1 c28..64 bg=Selected
r2 c0..2 bg=Background|Surface
r2 c2..9 fg=Foreground bg=Background|Surface
r2 c9..24 bg=Background|Surface
r2 c24..35 fg=Muted bg=Background|Surface
r2 c35..64 bg=Background|Surface
r3 c0..2 bg=Background|Surface
r3 c2..10 fg=Muted bg=Background|Surface dim
r3 c10..24 bg=Background|Surface
r3 c24..37 fg=Muted bg=Background|Surface
r3 c37..64 bg=Background|Surface
r4 c0..2 bg=Background|Surface
r4 c2..10 fg=Foreground bg=Background|Surface
r4 c10..24 bg=Background|Surface
r4 c24..31 fg=Muted bg=Background|Surface
r4 c31..64 bg=Background|Surface

== ansi-16
  Theme                 Shoreline, follows terminal
▸ Motion                Full
  Density               Comfortable
  Provider              Sign in first
  Language              English
---
r0 c24..51 dim
r1 c0..1 fg=Primary
r1 c2..8 bold
r1 c24..28 dim
r2 c24..35 dim
r3 c2..10 dim
r3 c24..37 dim
r4 c24..31 dim

== unknown-ground
  Theme                 Shoreline, follows terminal
▸ Motion                Full
  Density               Comfortable
  Provider              Sign in first
  Language              English
---
r0 c24..51 dim
r1 c0..1 fg=Primary
r1 c2..8 bold
r1 c24..28 dim
r2 c24..35 dim
r3 c2..10 dim
r3 c24..37 dim
r4 c24..31 dim

== no-color
  Theme                 Shoreline, follows terminal
▸ Motion                Full
  Density               Comfortable
  Provider              Sign in first
  Language              English
---
r0 c24..51 dim
r1 c2..8 bold
r1 c24..28 dim
r2 c24..35 dim
r3 c2..10 dim
r3 c24..37 dim
r4 c24..31 dim

== ascii
  Theme                 Shoreline, follows terminal
> Motion                Full
  Density               Comfortable
  Provider              Sign in first
  Language              English
---
r0 c24..51 dim
r1 c2..8 bold
r1 c24..28 dim
r2 c24..35 dim
r3 c2..10 dim
r3 c24..37 dim
r4 c24..31 dim
