tests/snapshots/snapshots__message.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
▎ Show every component in the README.

● The gallery uses the same components as the library.
▏
▏ Each preview includes light, dark and ASCII treatments.




---
r0 c0..1 fg=Primary bg=Background bold
r0 c1..2 bg=Background
r0 c2..37 fg=Foreground bg=Background
r0 c37..64 bg=Background
r1 c0..64 bg=Background
r2 c0..1 fg=Primary bg=Background bold
r2 c1..2 bg=Background
r2 c2..54 fg=Foreground bg=Background
r2 c54..64 bg=Background
r3 c0..2 fg=Dim bg=Background
r3 c2..64 bg=Background
r4 c0..2 fg=Dim bg=Background
r4 c2..57 fg=Foreground bg=Background
r4 c57..64 bg=Background
r5 c0..64 bg=Background
r6 c0..64 bg=Background
r7 c0..64 bg=Background
r8 c0..64 bg=Background

== dark-graphite
▎ Show every component in the README.

● The gallery uses the same components as the library.
▏
▏ Each preview includes light, dark and ASCII treatments.




---
r0 c0..1 fg=Primary bg=Background bold
r0 c1..2 bg=Background
r0 c2..37 fg=Foreground bg=Background
r0 c37..64 bg=Background
r1 c0..64 bg=Background
r2 c0..1 fg=Primary bg=Background bold
r2 c1..2 bg=Background
r2 c2..54 fg=Foreground bg=Background
r2 c54..64 bg=Background
r3 c0..2 fg=Dim bg=Background
r3 c2..64 bg=Background
r4 c0..2 fg=Dim bg=Background
r4 c2..57 fg=Foreground bg=Background
r4 c57..64 bg=Background
r5 c0..64 bg=Background
r6 c0..64 bg=Background
r7 c0..64 bg=Background
r8 c0..64 bg=Background

== light-truecolor
▎ Show every component in the README.

● The gallery uses the same components as the library.
▏
▏ Each preview includes light, dark and ASCII treatments.




---
r0 c0..1 fg=Primary bg=Background bold
r0 c1..2 bg=Background
r0 c2..37 fg=Foreground bg=Background
r0 c37..64 bg=Background
r1 c0..64 bg=Background
r2 c0..1 fg=Primary bg=Background bold
r2 c1..2 bg=Background
r2 c2..54 fg=Foreground bg=Background
r2 c54..64 bg=Background
r3 c0..2 fg=Dim bg=Background
r3 c2..64 bg=Background
r4 c0..2 fg=Dim bg=Background
r4 c2..57 fg=Foreground bg=Background
r4 c57..64 bg=Background
r5 c0..64 bg=Background
r6 c0..64 bg=Background
r7 c0..64 bg=Background
r8 c0..64 bg=Background

== dark-256
▎ Show every component in the README.

● The gallery uses the same components as the library.
▏
▏ Each preview includes light, dark and ASCII treatments.




---
r0 c0..1 fg=Primary bg=Background bold
r0 c1..2 bg=Background
r0 c2..37 fg=Foreground bg=Background
r0 c37..64 bg=Background
r1 c0..64 bg=Background
r2 c0..1 fg=Primary bg=Background bold
r2 c1..2 bg=Background
r2 c2..54 fg=Foreground bg=Background
r2 c54..64 bg=Background
r3 c0..2 fg=Dim bg=Background
r3 c2..64 bg=Background
r4 c0..2 fg=Dim bg=Background
r4 c2..57 fg=Foreground bg=Background
r4 c57..64 bg=Background
r5 c0..64 bg=Background
r6 c0..64 bg=Background
r7 c0..64 bg=Background
r8 c0..64 bg=Background

== light-256
▎ Show every component in the README.

● The gallery uses the same components as the library.
▏
▏ Each preview includes light, dark and ASCII treatments.




---
r0 c0..1 fg=Primary bg=Background|Surface bold
r0 c1..2 bg=Background|Surface
r0 c2..37 fg=Foreground bg=Background|Surface
r0 c37..64 bg=Background|Surface
r1 c0..64 bg=Background|Surface
r2 c0..1 fg=Primary bg=Background|Surface bold
r2 c1..2 bg=Background|Surface
r2 c2..54 fg=Foreground bg=Background|Surface
r2 c54..64 bg=Background|Surface
r3 c0..2 fg=Dim bg=Background|Surface
r3 c2..64 bg=Background|Surface
r4 c0..2 fg=Dim bg=Background|Surface
r4 c2..57 fg=Foreground bg=Background|Surface
r4 c57..64 bg=Background|Surface
r5 c0..64 bg=Background|Surface
r6 c0..64 bg=Background|Surface
r7 c0..64 bg=Background|Surface
r8 c0..64 bg=Background|Surface

== ansi-16
▎ Show every component in the README.

● The gallery uses the same components as the library.
▏
▏ Each preview includes light, dark and ASCII treatments.




---
r0 c0..1 fg=Primary bold
r2 c0..1 fg=Primary bold
r3 c0..2 dim
r4 c0..2 dim

== unknown-ground
▎ Show every component in the README.

● The gallery uses the same components as the library.
▏
▏ Each preview includes light, dark and ASCII treatments.




---
r0 c0..1 fg=Primary bold
r2 c0..1 fg=Primary bold
r3 c0..2 dim
r4 c0..2 dim

== no-color
▎ Show every component in the README.

● The gallery uses the same components as the library.
▏
▏ Each preview includes light, dark and ASCII treatments.




---
r0 c0..1 bold
r2 c0..1 bold
r3 c0..2 dim
r4 c0..2 dim

== ascii
| Show every component in the README.

. The gallery uses the same components as the library.
|
| Each preview includes light, dark and ASCII treatments.




---
r0 c0..1 bold
r2 c0..1 bold
r3 c0..2 dim
r4 c0..2 dim
