tests/snapshots/snapshots__motion-modes.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
⣦ Working · 3 s
● Reduced motion · 3 s
● Still · 3 s
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..9 fg=Foreground bg=Background
r0 c9..12 fg=Border bg=Background
r0 c12..15 fg=Muted bg=Background
r0 c15..40 bg=Background
r1 c0..1 fg=Live bg=Background
r1 c1..2 bg=Background
r1 c2..16 fg=Foreground bg=Background
r1 c16..19 fg=Border bg=Background
r1 c19..22 fg=Muted bg=Background
r1 c22..40 bg=Background
r2 c0..1 fg=Live bg=Background
r2 c1..2 bg=Background
r2 c2..7 fg=Foreground bg=Background
r2 c7..10 fg=Border bg=Background
r2 c10..13 fg=Muted bg=Background
r2 c13..40 bg=Background

== dark-graphite
⣦ Working · 3 s
● Reduced motion · 3 s
● Still · 3 s
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..9 fg=Foreground bg=Background
r0 c9..12 fg=Border bg=Background
r0 c12..15 fg=Muted bg=Background
r0 c15..40 bg=Background
r1 c0..1 fg=Live bg=Background
r1 c1..2 bg=Background
r1 c2..16 fg=Foreground bg=Background
r1 c16..19 fg=Border bg=Background
r1 c19..22 fg=Muted bg=Background
r1 c22..40 bg=Background
r2 c0..1 fg=Live bg=Background
r2 c1..2 bg=Background
r2 c2..7 fg=Foreground bg=Background
r2 c7..10 fg=Border bg=Background
r2 c10..13 fg=Muted bg=Background
r2 c13..40 bg=Background

== light-truecolor
⣦ Working · 3 s
● Reduced motion · 3 s
● Still · 3 s
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..9 fg=Foreground bg=Background
r0 c9..12 fg=Border bg=Background
r0 c12..15 fg=Muted bg=Background
r0 c15..40 bg=Background
r1 c0..1 fg=Live bg=Background
r1 c1..2 bg=Background
r1 c2..16 fg=Foreground bg=Background
r1 c16..19 fg=Border bg=Background
r1 c19..22 fg=Muted bg=Background
r1 c22..40 bg=Background
r2 c0..1 fg=Live bg=Background
r2 c1..2 bg=Background
r2 c2..7 fg=Foreground bg=Background
r2 c7..10 fg=Border bg=Background
r2 c10..13 fg=Muted bg=Background
r2 c13..40 bg=Background

== dark-256
⣦ Working · 3 s
● Reduced motion · 3 s
● Still · 3 s
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..9 fg=Foreground bg=Background
r0 c9..12 fg=Border bg=Background
r0 c12..15 fg=Muted bg=Background
r0 c15..40 bg=Background
r1 c0..1 fg=Live bg=Background
r1 c1..2 bg=Background
r1 c2..16 fg=Foreground bg=Background
r1 c16..19 fg=Border bg=Background
r1 c19..22 fg=Muted bg=Background
r1 c22..40 bg=Background
r2 c0..1 fg=Live bg=Background
r2 c1..2 bg=Background
r2 c2..7 fg=Foreground bg=Background
r2 c7..10 fg=Border bg=Background
r2 c10..13 fg=Muted bg=Background
r2 c13..40 bg=Background

== light-256
⣦ Working · 3 s
● Reduced motion · 3 s
● Still · 3 s
---
r0 c0..1 fg=Live bg=Background|Surface
r0 c1..2 bg=Background|Surface
r0 c2..9 fg=Foreground bg=Background|Surface
r0 c9..12 fg=Border bg=Background|Surface
r0 c12..15 fg=Muted bg=Background|Surface
r0 c15..40 bg=Background|Surface
r1 c0..1 fg=Live bg=Background|Surface
r1 c1..2 bg=Background|Surface
r1 c2..16 fg=Foreground bg=Background|Surface
r1 c16..19 fg=Border bg=Background|Surface
r1 c19..22 fg=Muted bg=Background|Surface
r1 c22..40 bg=Background|Surface
r2 c0..1 fg=Live bg=Background|Surface
r2 c1..2 bg=Background|Surface
r2 c2..7 fg=Foreground bg=Background|Surface
r2 c7..10 fg=Border bg=Background|Surface
r2 c10..13 fg=Muted bg=Background|Surface
r2 c13..40 bg=Background|Surface

== ansi-16
⣦ Working · 3 s
● Reduced motion · 3 s
● Still · 3 s
---
r0 c0..1 fg=Live
r0 c9..15 dim
r1 c0..1 fg=Live
r1 c16..22 dim
r2 c0..1 fg=Live
r2 c7..13 dim

== unknown-ground
⣦ Working · 3 s
● Reduced motion · 3 s
● Still · 3 s
---
r0 c0..1 fg=Live
r0 c9..15 dim
r1 c0..1 fg=Live
r1 c16..22 dim
r2 c0..1 fg=Live
r2 c7..13 dim

== no-color
⣦ Working · 3 s
● Reduced motion · 3 s
● Still · 3 s
---
r0 c9..15 dim
r1 c16..22 dim
r2 c7..13 dim

== ascii
\ Working - 3 s
. Reduced motion - 3 s
. Still - 3 s
---
r0 c9..15 dim
r1 c16..22 dim
r2 c7..13 dim
